[workspace]

members = [
    "branches",
    "data-types",
    "enumerations",
    "functions",
    "guessing-game",
    "learn-modules",
    "ownerships",
    "string",
    "structs",
    "variables",
    "vector",
    "hashmap",
    "error-handling",
    "generics",
    "traits",
    "lifetime",
    "tests",
    "minigrep",
    "closure"
]
resolver="2"
