[workspace]

members = [
    "branches",
    "data-types",
    "enumerations",
    "functions",
    "guessing-game",
    "learn-modules",
    "ownerships",
    "string",
    "structs",
    "variables",
    "vector",
    "hashmap",
    "error-handling",
    "generics",
    "traits",
    "lifetime",
    "tests",
    "minigrep",
    "closure",
    "iterator",
    "smart-pointer",
    "concurrency",
    "oop",
    "oop_gui",
    "pattern_matching",
    "unsafe_rust",
    "advance_trait",
    "advance_function",
    "web_server",
    "rayon_multithreading",
]

resolver="2"
